--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     </div>
     <div class="azul">
         <iframe title="Speckle" 
-                src="https://app.speckle.systems/projects/4fe6b2ee63/models/6151567ec8#embed=%7B%22isEnabled%22%3Atrue%2C%22isTransparent%22%3Atrue%2C%22hideControls%22%3Atrue%7D" 
+                src="https://app.speckle.systems/projects/4fe6b2ee63/models/6151567ec8#embed=%7B%22isEnabled%22%3Atrue%2C%22isTransparent%22%3Atrue%7D"
                 width="100%" 
                 height="100%" 
                 frameborder="0"></iframe>
